// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="sh sh--y"
  >
    <h1
      className="sh-title"
    >
      Cosmic Incursion
    </h1>
  </div>
  <div
    className="t--intro m-v300"
  >
    Bad things getting in from other universes
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <div
        className="txt"
      >
        <label
          className="txt-l"
          htmlFor="QuestionsPane-description"
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          Description
        </label>
        <textarea
          className="txt-f"
          id="QuestionsPane-description"
          name="description"
          onChange={[Function]}
          placeholder="Please describe your request"
          rows="5"
          value=""
        />
      </div>
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            aria-hidden={true}
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <button
            className="btn btn--w btn--b"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
                "width": "100%",
              }
            }
            type="button"
          >
            Upload Photo
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--3"
      disabled={false}
      type="submit"
    >
      Next
    </button>
  </div>
</form>
`;

exports[`existing description 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="sh sh--y"
  >
    <h1
      className="sh-title"
    >
      Cosmic Incursion
    </h1>
  </div>
  <div
    className="t--intro m-v300"
  >
    Bad things getting in from other universes
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <div
        className="txt"
      >
        <label
          className="txt-l"
          htmlFor="QuestionsPane-description"
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          Description
        </label>
        <textarea
          className="txt-f"
          id="QuestionsPane-description"
          name="description"
          onChange={[Function]}
          placeholder="Please describe your request"
          rows="5"
          value="Please pick up my bulk items. "
        />
      </div>
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            aria-hidden={true}
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <button
            className="btn btn--w btn--b"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
                "width": "100%",
              }
            }
            type="button"
          >
            Upload Photo
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--3"
      disabled={false}
      type="submit"
    >
      Next
    </button>
  </div>
</form>
`;

exports[`service with metadata 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="sh sh--y"
  >
    <h1
      className="sh-title"
    >
      Cosmic Incursion
    </h1>
  </div>
  <div
    className="t--intro m-v300"
  >
    Bad things getting in from other universes
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <div
        className="txt"
      >
        <label
          className="txt-l"
          htmlFor="QuestionsPane-description"
          style={
            Object {
              "marginTop": 0,
            }
          }
        >
          Description
        </label>
        <textarea
          className="txt-f"
          id="QuestionsPane-description"
          name="description"
          onChange={[Function]}
          placeholder="Please describe your request"
          rows="5"
          value=""
        />
      </div>
      <div>
        <div
          className="txt"
        >
          <label
            className="txt-l"
            htmlFor="ST-CMTS"
          >
            Please provide any other relevant information:
             
          </label>
          <textarea
            aria-required={false}
            className="txt-f"
            id="ST-CMTS"
            name="ST-CMTS"
            onChange={[Function]}
            rows="5"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            aria-hidden={true}
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <button
            className="btn btn--w btn--b"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
                "width": "100%",
              }
            }
            type="button"
          >
            Upload Photo
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--3"
      disabled={false}
      type="submit"
    >
      Next
    </button>
  </div>
</form>
`;
